--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "axios": "^1.13.2",
+    "chart.js": "^4.4.1",
+    "clsx": "^2.1.1",
     "d3": "^7.8.5",
     "firebase-tools": "^14.26.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-d3-tree": "^3.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
+    "react-xarrows": "^2.0.2",
     "recharts": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
