--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
