--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "clsx": "^2.1.1",
     "d3": "^7.8.5",
     "firebase-tools": "^14.26.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -30,6 +32,7 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^3.2.0",
     "react-xarrows": "^2.0.2",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
