--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.1",
     "clsx": "^2.1.1",
     "d3": "^7.8.5",
+    "firebase": "^12.9.0",
     "firebase-tools": "^14.26.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.1.0",
